; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_drawpath.c_uiDrawPathLineTo.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_drawpath.c_uiDrawPathLineTo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.piece = type { double*, i32 }

@lineTo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiDrawPathLineTo(i32* %0, double %1, double %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca %struct.piece, align 8
  store i32* %0, i32** %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %8 = load i32, i32* @lineTo, align 4
  %9 = getelementptr inbounds %struct.piece, %struct.piece* %7, i32 0, i32 1
  store i32 %8, i32* %9, align 8
  %10 = load double, double* %5, align 8
  %11 = getelementptr inbounds %struct.piece, %struct.piece* %7, i32 0, i32 0
  %12 = load double*, double** %11, align 8
  %13 = getelementptr inbounds double, double* %12, i64 0
  store double %10, double* %13, align 8
  %14 = load double, double* %6, align 8
  %15 = getelementptr inbounds %struct.piece, %struct.piece* %7, i32 0, i32 0
  %16 = load double*, double** %15, align 8
  %17 = getelementptr inbounds double, double* %16, i64 1
  store double %14, double* %17, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @add(i32* %18, %struct.piece* %7)
  ret void
}

declare dso_local i32 @add(i32*, %struct.piece*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
